# rna_classifier

./: LICENSE  README.md  pyproject.toml
results/models/20250915/180119/: 20250915-180119_rna_classifier_model_architecture.json
results/models/20250916/154333/: 20250916-154333_rna_classifier_model_architecture.json
results/models/20250916/155327/: 20250916-155327_rna_classifier_model_architecture.json
results/models/20250916/155636/: 20250916-155636_rna_classifier_model_architecture.json
results/models/20250916/162658/: 20250916-162658_rna_classifier_model_architecture.json
results/models/20250916/222418/: 20250916-222418_rna_classifier_model_architecture.json
results/models/20250917/003950/: 20250917-003950_rna_classifier_model_architecture.json
results/models/20250917/004754/: 20250917-004754_rna_classifier_model_architecture.json
results/models/20250917/005604/: 20250917-005604_rna_classifier_model_architecture.json
src/notebooks/: dataset_creation.ipynb  tf_rna.ipynb
