[project]
name = "rna-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book==2.0.0b3",
    "jupyterlab>=4.4.6",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "ruff>=0.12.10",
    "scikit-learn>=1.7.2",
    "tensorflow[and-cuda]>=2.20.0",
]
